fixed relative path which were broken on pages with a / in the url

--- a/css/ie.css
+++ b/css/ie.css
@@ -25,8 +25,8 @@
 #menuHelpForum {background-image: url(/images/buttons/forum_button.png)}
 #menuHelpRules {background-image: url(/images/buttons/rules_button.png)}
 
-#playArea {background-image: url("../images/playbutton.png")}
-#downloadArea {background-image: url("../images/downloadbutton.png")}
+#playArea {background-image: url("/images/playbutton.png")}
+#downloadArea {background-image: url("/images/downloadbutton.png")}
 
 #menuPlayerOnline {background-image: url(/images/buttons/postman_button.png)}
 #menuPlayerHalloffame {background-image: url(/images/buttons/quests_button.png)}
