--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url("../images/background.png");
+	background-image: url("/images/background.png");
 
 	/* must do this to center body as IE doesnt like auto margin on body */
 	font-family: Arial, Helvetica, "Liberation Sans", "Lucida Sans", Sans-serif;
@@ -60,7 +60,7 @@ h1 {
 	border: 4px solid black;
 	
 	/* As background overflow header it needs to be placed here for best effect. */
-	background-image: url("../images/header_background.jpg");
+	background-image: url("/images/header_background.jpg");
 	background-position: top center;
 	background-repeat: repeat-x;
 }
@@ -72,7 +72,7 @@ h1 {
 }
 
 #oneLineDescription {
-	background-image: url("../images/onelinedesc.png");
+	background-image: url("/images/onelinedesc.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	color: Black;
@@ -101,7 +101,7 @@ h1 {
 #topMenu {
 	height: 85px;
 	margin: 0 190px 4px 190px;
-	background-image: url("../images/menu.png");
+	background-image: url("/images/menu.png");
 	background-repeat: no-repeat;
 }
 
@@ -195,11 +195,11 @@ img.screenshot {
 }
 
 #playArea {
-	background-image: url("../images/playbutton.png");
+	background-image: url("/images/playbutton.png");
 }
 
 #downloadArea {
-	background-image: url("../images/downloadbutton.png");
+	background-image: url("/images/downloadbutton.png");
 }
 
 /* content area */
@@ -338,7 +338,7 @@ img.screenshot {
 .status {
 	padding: 4px;
 	color: red;
-	background: url('../images/questionmark.png') no-repeat;
+	background: url('/images/questionmark.png') no-repeat;
 	padding-left: 26px;
 }
 
@@ -877,7 +877,7 @@ span.stendhalAdminLow {color: #CC0}
 a.openid_large_btn:focus{outline:none;}
 a.openid_large_btn:focus{-moz-outline-style:none;}
 .openid_selected{border:4px solid #DDD;}
-#openid_identifier{padding-left: 32px; background: url("../images/openid.png") no-repeat left center transparent}
+#openid_identifier{padding-left: 32px; background: url("/images/openid.png") no-repeat left center transparent}
 
 #tooltip {position: absolute; z-index: 3000;}
 #tooltip h3, #tooltip div { margin: 0; }
